fix: test scrollbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -251,13 +251,13 @@ input[type="checkbox"].custom-check:checked::after {
 
 /* ✅ Scrollbar customizada para Android */
 .boardgame-list {
-  scrollbar-width: thin;
+  scrollbar-width: auto;
   scrollbar-color: #3AC3DF #f0f0f0;
 }
 
 /* Chrome, Safari, Edge */
 .boardgame-list::-webkit-scrollbar {
-  width: 8px;
+  width: 14px;
 }
 
 .boardgame-list::-webkit-scrollbar-track {
